# arcanite

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: cookbook.ipynb
src/arcanite/: __init__.py
src/arcanite/cards/: lenormand_schema_reference.md
src/arcanite/cards/json/lenormand/: l01_the_rider.json  l02_the_clover.json  l03_the_ship.json  l04_the_house.json  l05_the_tree.json  l06_the_clouds.json  l07_the_snake.json  l08_the_coffin.json  l09_the_bouquet.json  l10_the_scythe.json  l11_the_whip.json  l12_the_birds.json  l13_the_child.json  l14_the_fox.json  l15_the_bear.json  l16_the_star.json  l17_the_stork.json  l18_the_dog.json  l19_the_tower.json  l20_the_garden.json  l21_the_mountain.json  l22_the_path.json  l23_the_mice.json  l24_the_heart.json  l25_the_ring.json  l26_the_book.json  l27_the_letter.json  l28_the_gentleman.json  l29_the_lady.json  l30_the_lily.json  l31_the_sun.json  l32_the_moon.json  l33_the_key.json  l34_the_fish.json  l35_the_anchor.json  l36_the_cross.json
src/arcanite/core/: __init__.py  deck.py  models.py  protocols.py  spread.py
src/arcanite/interpretation/: __init__.py  classifier.py  synthesizer.py
src/arcanite/interpretation/llm/: __init__.py  providers.py
src/arcanite/prompts/traditions/: intuitive.yaml  kate-signature.yaml
src/arcanite/reading/: __init__.py  assembly.py  engine.py
src/arcanite/render/: __init__.py  typst_renderer.py
src/arcanite/spreads/: lenormand-spreads.json
src/arcanite/templates/: __init__.py  reading.typ
